@startuml

skinparam classAttributeIconSize 0

package "On-Chain Smart Contracts" #FFF4CC  {
class IdentityProfile {
  - userDID : address
  - creditTier : CreditTier
  - incomeBand : IncomeBand
  - dataPointer : bytes32
}

class IdentityRegistry {
  - identities : mapping
  + register() : void
  + updateProfile(userDID : address, creditTier : CreditTier, incomeBand : IncomeBand) : void
  + updateDataPointer(dataPointer : bytes32) : void
  + verifyAddressOwnership(userAddress : address, message : bytes, signature : bytes) : bool
  + getCreditTier(ownerDID : address) : CreditTier
  + getIncomeBand(ownerDID : address) : IncomeBand
}

class Consent {
  - consentID : bytes32
  - requesterDID : address
  - userDID : address
  - startDate : uint256
  - endDate : uint256
  - status : ConsentStatus
}

class ConsentManager {
  - consents : mapping
  + createConsent(requesterDID : address, userDID : address, startDate : uint256, endDate : uint256) : bytes32
  + changeStatus(userDID : address, consentID : bytes32, newStatus : ConsentStatus) : void
  + isConsentGranted(userDID : address, requesterDID : address) : bool
  + getConsent(consentID : bytes32) : Consent
}

class DataBroker {
  + getCreditTier(ownerDID : address) : CreditTier
  + getIncomeBand(ownerDID : address) : IncomeBand
}

class DataSharingToken {
  - totalSupply : uint256
  - balanceOf : mapping
  - minters : mapping
  + mint(to : address, amount : uint256) : void
  + addMinter(minter : address) : void
  + removeMinter(minter : address) : void
}
}

package "Off-Chain Services" {
class FinancialDataStorage {
  + save(financial_data) : bytes32
  + load(user_did)
  + verify_hash(user_did, expected_hash) : bool
  + add_asset()
  + add_liability()
  + remove_asset()
  + remove_liability()
}

class DocumentValidatorService {
  + validate_documents(encrypted_docs)
  + calculate_credit_tier(financial_data) : CreditTier
  + calculate_income_band(income_data) : IncomeBand
  + update_on_chain_profile(user_address, credit_tier, income_band) : void
}

class CreditCalculator {
  + calculate_net_worth(assets, liabilities)
  + classify_credit_tier(financial_metrics) : CreditTier
  + classify_income_band(annual_income) : IncomeBand
  + calculate_risk_score(financial_data) : uint16
}

class ClientApplication {
  + register_on_chain() : void
  + upload_financial_data() : bytes32
  + submit_to_validator() : void
  + grant_consent(requester_address : address) : void
  + update_data_pointer(hash : bytes32) : void
  + revoke_consent(requester_address : address) : void
  + view_credit_profile() : void
  + view_access_logs() : void
}
}

IdentityRegistry "1" --> "0..*" IdentityProfile : stores
ConsentManager "1" --> "0..*" Consent : manages
DataBroker --> ConsentManager : checks consent via
DataBroker --> IdentityRegistry : reads credit tier/income
DataBroker --> DataSharingToken : mints rewards to user
DocumentValidatorService --> IdentityRegistry : updateProfile()
DocumentValidatorService --> CreditCalculator : uses
ClientApplication --> IdentityRegistry : register()/updateDataPointer()
ClientApplication --> ConsentManager : createConsent()/changeStatus()
ClientApplication --> FinancialDataStorage : encrypts & stores data
ClientApplication --> DocumentValidatorService : submits encrypted docs
FinancialDataStorage ..> IdentityRegistry : returns hash for dataPointer
Bank --> IdentityRegistry : verifyAddressOwnership()/check registration
Bank --> DataBroker : requests credit tier/income band
Bank ..> ClientApplication : requests consent from
Validator --> DocumentValidatorService : operates
Client --> ClientApplication : uses wallet

note right of IdentityRegistry
  Stores publicly verifiable creditTier and incomeBand set by validator,
  plus dataPointer hash pointing to encrypted off-chain financial data.
  verifyAddressOwnership() proves the client controls their Ethereum address.
end note

note bottom of ConsentManager
  Consent lifecycle: client creates consent with bank requester,
  then grants/revokes via changeStatus(); DataBroker enforces isConsentGranted
  before exposing IdentityRegistry summaries.
end note

note right of DataBroker
  On first successful consent-checked access per requester/user pair,
  DataBroker mints reward tokens to the data owner via DataSharingToken.
  Rewards can be tuned at deployment by rewardPerAccess.
end note

note bottom of FinancialDataStorage
  Raw financial data (assets, liabilities, documents) remains off-chain,
  encrypted per user. Saved hash feeds IdentityRegistry.updateDataPointer
  so banks can optionally verify integrity by recomputing the hash.
end note

legend right
  |<#FFF4CC>| On-chain smart contracts / ledger state |
  |<#DFF0FF>| Off-chain services / encrypted data |
end legend

@enduml
